--- a/html/index.html
+++ b/html/index.html
@@ -25,9 +25,9 @@
                     <h1 class="name">Name</h1>
                 </div>
                 <div class="timeframes">
-                    <a href="daily">Daily</a>
-                    <a href="weekly">Weekly</a>
-                    <a href="monthly">Monthly</a>
+                    <button id="daily" class="daily">Daily</button>
+                    <button id="weekly" class="weekly">Weekly</button>
+                    <button id="monthly" class="monthly">Monthly</button>
                 </div>
             </div>   
 
@@ -39,7 +39,7 @@
                                 <h3>Work</h3>
                             </header>
 
-                            <div class="work-time">Time</div>
+                            <div class="work-time" id="workTime">Time</div>
 
                             <p class="work-last-week-time">Last Week - ?</p>
                         </div>
