--- a/html/index.html
+++ b/html/index.html
@@ -38,9 +38,10 @@
                             <header>
                                 <h3>Work</h3>
                             </header>
-
-                            <div class="work-time" id="workTime">Time</div>
-
+                            <div class="time-hrs">
+                                <div class="work-time" id="workTime">Time</div>
+                                <div class="hrs">Hrs</div>
+                            </div>
                             <p class="work-last-week-time">Last Week - ?</p>
                         </div>
                     </div>
@@ -50,8 +51,10 @@
                             <header>
                                 <h3>Play</h3>
                             </header>
-
-                            <div class="play-time">Time</div>
+                            <div class="time-hrs">
+                                <div class="play-time">Time</div>
+                                <div class="hrs">Hrs</div>
+                            </div>
 
                             <p class="play-last-week-time">Last Week - ?</p>
                         </div>
@@ -62,10 +65,11 @@
                             <header>
                                 <h3>Study</h3>
                             </header>
-
-                            <div class="study-time">Time</div>
-
-                            <p class="study-last-week-time">Last Week - ?</p>
+                            <div class="time-hrs">
+                                <div class="study-time">Time</div>
+                                <div class="hrs">Hrs</div>
+                            </div>
+                                <p class="study-last-week-time">Last Week - ?</p>
                         </div>
                     </div>
 
@@ -74,8 +78,10 @@
                             <header>
                                 <h3>Exercise</h3>
                             </header>
-
+                            <div class="time-hrs">
                             <div class="exercise-time">Time</div>
+                            <div class="hrs">Hrs</div>
+                            </div>
 
                             <p class="exercise-last-week-time">Last Week - ?</p>
                         </div>
@@ -86,8 +92,10 @@
                             <header>
                                 <h3>Social</h3>
                             </header>
-
+                            <div class="time-hrs">
                             <div class="social-time">Time</div>
+                            <div class="hrs">Hrs</div>
+                            </div>
 
                             <p class="social-last-week-time">Last Week - ?</p>
                         </div>
@@ -98,8 +106,10 @@
                             <header>
                                 <h3>Self Care</h3>
                             </header>
-
+                            <div class="time-hrs">
                             <div class="self-care-time">Time</div>
+                            <div class="hrs">Hrs</div>
+                            </div>
 
                             <p class="self-care-last-week-time">Last Week - ?</p>
                         </div>
