--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <main>
+
+        <header>
+            <h1 class="introduction">Please Enter Name</h1>
+            <input type="text" placeholder="Enter Name" required>
+            <button type="submit" class="submit">Submit</button>
+        </header>
+
         <div class="outer-container">
             <div class="profile-container">
                 <div class="inner-profile-container">
